Changes
=======

2.4 (unreleased)
----------------

- Nothing changed yet.


2.3 (2011-02-14)
----------------

- Implement the generic (Multi)Subscriptions components.

2.2 (2010-11-03)
----------------

- The default values computation for the context directive and the provides
  directive is now defined in the directives themselves. This means that where
  the values for these directives is being retrieved, the "default_context"
  function does not need to be passed along anymore for general cases.

  Analogous to this, when getting values for the provides directive the
  "default_provides" function does not need to be passed along in the general
  case.

2.1 (2010-11-01)
----------------

* Made package comply to zope.org repository policy.

* Moved directives 'order' from grokcore.viewlet and 'path' from
  grokcore.view to this very package.

* Tiny dependency adjustment: moved zope.event to test dependencies.

* Port from 1.x branch exclude parameter to the Grok ZCML directive.

* Port from 1.x branch the ignore of testing.py modules.

2.0 (2009-09-16)
----------------

* Use a newer version of Martian that has better support for
  inheritance.  This is demonstrated in ``tests/inherit``.

* The ``ContextGrokker`` and the ``scan.py`` module have gone away
  thanks the newer Martian.

* Directive implementations (in their factory method) should *not*
  bind directives. Directive binding cannot take place at import time,
  but only at grok time. Binding directives during import time (when
  directives are executed) can lead to change problems. (we noticed
  this during our refactoring to use the new Martian).

* Use 1.0b1 versions.cfg in Grok's release info instead of a local
  copy; a local copy for all grokcore packages is just too hard to
  maintain.

1.7 (2009-06-01)
----------------

* Add missing provider, global_adapter, implementsOnly, classProvides() to
  the module interface so that they are included in __all__

1.6 (2009-04-10)
----------------
